<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >

    <ScrollView android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout android:id="@+id/page_home_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__home_ek2"
                    android:background="@drawable/_bg__home_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="360dp"
                    android:layout_height="640dp" />

                <ImageView android:id="@+id/capture3_1_ek1"
                    android:src="@drawable/capture3_1_ek1"
                    android:contentDescription="@string/capture3_1_ek1"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="22dp"
                    android:layout_width="96dp"
                    android:layout_height="70dp" />

                <ImageView android:id="@+id/rectangle_1"
                    android:src="@drawable/rectangle_1"
                    android:contentDescription="@string/rectangle_1"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="127dp"
                    android:layout_width="348dp"
                    android:layout_height="168dp" />

                <ImageView android:id="@+id/capture_removebg_preview_1"
                    android:src="@drawable/capture_removebg_preview_1"
                    android:contentDescription="@string/capture_removebg_preview_1"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="127dp"
                    android:layout_width="192dp"
                    android:layout_height="168dp" />

                <TextView android:id="@+id/skincare"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="40sp"
                    android:shadowRadius="6"
                    android:shadowColor="#000000"
                    android:shadowDx="0"
                    android:shadowDy="4"
                    android:textColor="@color/skincare_color"
                    android:layout_marginStart="191dp"
                    android:layout_marginTop="145dp"
                    android:layout_width="236dp"
                    android:layout_height="96dp"
                    android:text="@string/skincare_string"
                    />

                <ImageView android:id="@+id/rectangle_2"
                    android:src="@drawable/rectangle_2"
                    android:contentDescription="@string/rectangle_2"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="350dp"
                    android:layout_width="348dp"
                    android:layout_height="168dp" />

                <ImageView android:id="@+id/image_removebg_preview_1"
                    android:src="@drawable/image_removebg_preview_1"
                    android:contentDescription="image_removebg_preview_1"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="405dp"
                    android:layout_width="249dp"
                    android:layout_height="113dp" />


            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>