<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >

    <ScrollView android:id="@+id/skincare"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



            <RelativeLayout android:id="@+id/page_skincare_ek2"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__skincare_ek3"
                    android:background="@drawable/_bg__skincare_ek3_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="408dp"
                    android:layout_height="724dp" />

                <ImageView android:id="@+id/capture3_1_ek2"
                    android:src="@drawable/capture3_1_ek2"
                    android:contentDescription="capture3_1_ek2"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="22dp"
                    android:layout_width="96dp"
                    android:layout_height="70dp" />

                <ImageView android:id="@+id/rectangle_12"
                    android:src="@drawable/rectangle_12"
                    android:contentDescription="rectangle_12"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="139dp"
                    android:layout_width="126dp"
                    android:layout_height="128dp" />

                <ImageView android:id="@+id/rectangle_4"
                    android:src="@drawable/rectangle_4"
                    android:contentDescription="rectangle_4"
                    android:layout_marginStart="201dp"
                    android:layout_marginTop="139dp"
                    android:layout_width="126dp"
                    android:layout_height="128dp" />

                <ImageView android:id="@+id/rectangle_9"
                    android:src="@drawable/rectangle_9"
                    android:contentDescription="rectangle_9"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="373dp"
                    android:layout_width="126dp"
                    android:layout_height="128dp" />

                <ImageView android:id="@+id/rectangle_11"
                    android:src="@drawable/rectangle_11"
                    android:contentDescription="rectangle_11"
                    android:layout_marginStart="201dp"
                    android:layout_marginTop="373dp"
                    android:layout_width="126dp"
                    android:layout_height="128dp" />

                <TextView
                    android:id="@+id/skintific_5x_ceramide_soothing_toner_80_ml_rp_128_800"
                    android:layout_width="147dp"
                    android:layout_height="87dp"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="281dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/skintific_5x_ceramide_soothing_toner_80_ml_rp_128_800_string"
                    android:textColor="@color/skintific_5x_ceramide_soothing_toner_80_ml_rp_128_800_color" />

                <TextView android:id="@+id/carasun_solkar_smart_uv_protector_30ml_rp_60_100"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/skintific_5x_ceramide_soothing_toner_80_ml_rp_128_800_color"
                    android:layout_marginLeft="201dp"
                    android:layout_marginTop="282dp"
                    android:layout_width="147dp"
                    android:layout_height="87dp"
                    android:text="@string/carasun_solkar_smart_uv_protector_30ml_rp_60_100_string"
                    />

                <TextView android:id="@+id/rojukiss_tea_tree_bija_pro_acne_serum_8ml_rp_19_800"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/skintific_5x_ceramide_soothing_toner_80_ml_rp_128_800_color"
                    android:layout_marginLeft="37dp"
                    android:layout_marginTop="515dp"
                    android:layout_width="147dp"
                    android:layout_height="87dp"
                    android:text="@string/rojukiss_tea_tree_bija_pro_acne_serum_8ml_rp_19_800_string"
                    />

                <TextView android:id="@+id/derma_angel_acne_patch_night__12_patch__rp_29_250"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/skintific_5x_ceramide_soothing_toner_80_ml_rp_128_800_color"
                    android:layout_marginLeft="201dp"
                    android:layout_marginTop="515dp"
                    android:layout_width="147dp"
                    android:layout_height="87dp"
                    android:text="@string/derma_angel_acne_patch_night__12_patch__rp_29_250_string"
                    />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>